# mtg-mechanics-parser

./: .gitignore  IMT575_Final Project.ipynb  MTG Power Score Criteria.docx  README.md  pyproject.toml
data/: combined_points_cleaned.csv
data/processed/: combined_points_cleaned.csv
data/raw/: combined_csv_pts.csv
notebooks/: IMT575_Final Project.ipynb
src/mtg_parser/constants/: feature_weights.py  features.py  keyword_weights.py  mechanics.py  searches.py
src/mtg_parser/data/: build_dataset.py  cleaning.py  download.py  extract_creatures.py
src/mtg_parser/features/: ability_features.py  activated.py  card_features.py  detect_zone.py  encode_keywords.py  feature_extractor.py  helpers.py  keyword_features.py  keywords_features.py  pattern_builder.py  pipeline.py  registery.py  special.py  tokens.py
src/mtg_parser/features/extractors/: activated.py  bounce.py  card_advantage.py  damage.py  destroy.py  global_effects.py  impulse_draw.py  keyword_counters.py  mana_production.py  minus_xx.py  reanimate.py  special.py  static.py  tokens.py  triggered.py
src/mtg_parser/parsing/: ability.py  extract_ability_blocks.py  keyword_router.py  preprocess.py
src/mtg_parser/pipeline/: build_context.py  card_ability_bundle.py  card_record.py  extract_ability_blocks.py  orchestrator.py
src/mtg_parser/scorer/: __init__.py  scoring.py
src/mtg_parser/scoring/: __init__.py  ability_scorer.py  card_scorer.py  keyword_scorer.py  pt_scorer.py  scoring.py
src/mtg_parser/utils/: normalizer.py  paths.py  text_preprocessing.py
tests/: test_scoring.py
(+9 files in other folders)
