[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imt575-final-project"
version = "0.1.0"
description = "MTG dataset ML project"
authors = [{ name = "Samuel Lee" }]
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "requests",
    "ijson",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = ["jupyter", "matplotlib", "pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]